Changed username placeholder in login to email

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 				<label for="username">
 					<i class="fas fa-user"></i>
 				</label>
-				<input type="text" name="username" placeholder="Username" id="username" required>
+				<input type="text" name="username" placeholder="email" id="username" required>
 				<label for="password">
 					<i class="fas fa-lock"></i>
 				</label>
